# tweets_generator

./: CMakeLists.txt  markov_chain.c  markov_chain.h  tweets_generator.c
